# ComfyUI-ARZUMATA-PixelIt

./: README.md  app.py  nodes.py  pixelit.py  pyproject.toml
palettes/: __init__.py  image_to_pixel.py  pixelartvillage.py  pixelit.py
