[project]
name = "comfyui-arzumata-pixelit"
description = "A python port of pixelit by giventofly."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ARZUMATA/ComfyUI-ARZUMATA-PixelIt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "arzumata"
DisplayName = "ComfyUI-ARZUMATA-PixelIt"
Icon = ""
